welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: ';' expected but '{' found.
   	 	while(couleur == Color.green){
                                             ^